// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render renders with label 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  position: relative;
}

.c8 {
  margin-left: 4px;
  font: 400 12px/20px 'Roboto';
}

.c4 {
  pointer-events: none;
  width: 16px;
  height: 16px;
  overflow: hidden;
  border: 1px solid rgba(44,44,44,0.16);
  border-radius: 3px;
  position: relative;
  display: block;
  box-sizing: border-box;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-transform: translateX(1px) translateY(3px);
  -ms-transform: translateX(1px) translateY(3px);
  transform: translateX(1px) translateY(3px);
}

.c7 {
  stroke-width: 2;
  stroke: #1785FB;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  stroke-dasharray: 48;
  stroke-dashoffset: 48;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  width: 16px;
  height: 16px;
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  margin: 0;
  padding: 0;
  border-radius: 3px;
  border: 1px solid rgba(44,44,44,0.16);
}

.c2:focus {
  outline: none;
}

.c2:focus {
  border: 2px solid #1785FB;
}

.c2:hover {
  border: 1px solid #47DB99;
}

.c2:disabled + .c3 {
  background-color: #E2E6E3;
}

.c2:disabled:hover {
  cursor: not-allowed;
  border: 1px solid rgba(44,44,44,0.16);
}

.c2:checked {
  border: 1px solid #1785FB;
}

.c2:checked + .c3 .c6 {
  -webkit-animation: gGaDtf 0.3s cubic-bezier(0.65,0,0.45,1) 300ms forwards;
  animation: gGaDtf 0.3s cubic-bezier(0.65,0,0.45,1) 300ms forwards;
}

.c2:disabled:checked + .c3 .c6 {
  stroke: rgba(44,44,44,0.16);
}

<label
  className="c0"
  htmlFor="test"
>
  <div
    className="c1"
  >
    <input
      checked={true}
      className="c2"
      disabled={false}
      id="test"
      name=""
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="c3 c4"
    >
      <svg
        className="c5"
        height="12px"
        width="12px"
      >
        <g
          fill="none"
        >
          <polyline
            className="c6 c7"
            points="1.65093994 3.80255127 4.48919678 6.97192383 10.3794556 0.717346191"
          />
        </g>
      </svg>
    </span>
  </div>
  <div
    className="c8"
  >
    Hola
  </div>
</label>
`;

exports[`render renders without crashing 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  position: relative;
}

.c4 {
  pointer-events: none;
  width: 16px;
  height: 16px;
  overflow: hidden;
  border: 1px solid rgba(44,44,44,0.16);
  border-radius: 3px;
  position: relative;
  display: block;
  box-sizing: border-box;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-transform: translateX(1px) translateY(3px);
  -ms-transform: translateX(1px) translateY(3px);
  transform: translateX(1px) translateY(3px);
}

.c7 {
  stroke-width: 2;
  stroke: #1785FB;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  stroke-dasharray: 48;
  stroke-dashoffset: 48;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  width: 16px;
  height: 16px;
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  margin: 0;
  padding: 0;
  border-radius: 3px;
  border: 1px solid rgba(44,44,44,0.16);
}

.c2:focus {
  outline: none;
}

.c2:focus {
  border: 2px solid #1785FB;
}

.c2:hover {
  border: 1px solid #47DB99;
}

.c2:disabled + .c3 {
  background-color: #E2E6E3;
}

.c2:disabled:hover {
  cursor: not-allowed;
  border: 1px solid rgba(44,44,44,0.16);
}

.c2:checked {
  border: 1px solid #1785FB;
}

.c2:checked + .c3 .c6 {
  -webkit-animation: gGaDtf 0.3s cubic-bezier(0.65,0,0.45,1) 300ms forwards;
  animation: gGaDtf 0.3s cubic-bezier(0.65,0,0.45,1) 300ms forwards;
}

.c2:disabled:checked + .c3 .c6 {
  stroke: rgba(44,44,44,0.16);
}

<label
  className="c0"
  htmlFor="test"
>
  <div
    className="c1"
  >
    <input
      checked={false}
      className="c2"
      disabled={false}
      id="test"
      name=""
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="c3 c4"
    >
      <svg
        className="c5"
        height="12px"
        width="12px"
      >
        <g
          fill="none"
        >
          <polyline
            className="c6 c7"
            points="1.65093994 3.80255127 4.48919678 6.97192383 10.3794556 0.717346191"
          />
        </g>
      </svg>
    </span>
  </div>
</label>
`;

exports[`render uses htmlFor for the label, and adds it as the input id 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  position: relative;
}

.c4 {
  pointer-events: none;
  width: 16px;
  height: 16px;
  overflow: hidden;
  border: 1px solid rgba(44,44,44,0.16);
  border-radius: 3px;
  position: relative;
  display: block;
  box-sizing: border-box;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-transform: translateX(1px) translateY(3px);
  -ms-transform: translateX(1px) translateY(3px);
  transform: translateX(1px) translateY(3px);
}

.c7 {
  stroke-width: 2;
  stroke: #1785FB;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  stroke-dasharray: 48;
  stroke-dashoffset: 48;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  width: 16px;
  height: 16px;
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  margin: 0;
  padding: 0;
  border-radius: 3px;
  border: 1px solid rgba(44,44,44,0.16);
}

.c2:focus {
  outline: none;
}

.c2:focus {
  border: 2px solid #1785FB;
}

.c2:hover {
  border: 1px solid #47DB99;
}

.c2:disabled + .c3 {
  background-color: #E2E6E3;
}

.c2:disabled:hover {
  cursor: not-allowed;
  border: 1px solid rgba(44,44,44,0.16);
}

.c2:checked {
  border: 1px solid #1785FB;
}

.c2:checked + .c3 .c6 {
  -webkit-animation: gGaDtf 0.3s cubic-bezier(0.65,0,0.45,1) 300ms forwards;
  animation: gGaDtf 0.3s cubic-bezier(0.65,0,0.45,1) 300ms forwards;
}

.c2:disabled:checked + .c3 .c6 {
  stroke: rgba(44,44,44,0.16);
}

<label
  className="c0"
  htmlFor="test"
>
  <div
    className="c1"
  >
    <input
      checked={false}
      className="c2"
      disabled={false}
      id="test"
      name=""
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="c3 c4"
    >
      <svg
        className="c5"
        height="12px"
        width="12px"
      >
        <g
          fill="none"
        >
          <polyline
            className="c6 c7"
            points="1.65093994 3.80255127 4.48919678 6.97192383 10.3794556 0.717346191"
          />
        </g>
      </svg>
    </span>
  </div>
</label>
`;
